Updated GOMSL specification.

--- a/Documents/GOSML/GOMSL.tex
+++ b/Documents/GOSML/GOMSL.tex
@@ -14,10 +14,10 @@
 	In this section two GOSML specifications will be described. Namely one using a mobile phone as tangible object and another using touch gestures. Furthermore, the cooperative aspect of the game will not be specified; a single human playing the game is assumed.
 	
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		\subsection{Manual Operators}
+		\subsection{Custom Manual Operators}
 		Besides the original manual operators several extra operators have to be defined to allow for the use of tangible objects and touch gestures.
 		
-		\
+		\subsection{}
 
 # Manual operators (page 17).
 Seve
