Updated server protocol.

--- a/Documents/GOSML/GOMSL.tex
+++ b/Documents/GOSML/GOMSL.tex
@@ -74,4 +74,9 @@ Method_for_goal: use object using <object_name>, and <location>
 
 // Specification using touch events.
 
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\section{Mobile Phone and Server Protocol}
+	In order for the mobile phones and server to communicate with each other we define an protocol to which they should conform. In basis the mobile phone sends specific requests to the server and retrieves data in a specific format, namely JSON in this case.
+	
+
 \end{document}
