--- a/Documents/Report/report.tex
+++ b/Documents/Report/report.tex
@@ -56,6 +56,8 @@ The components are divided into three categories, namely hardware components, so
 		\subsubsection{Android Application}
 		
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
+	\subsection{Librarys}
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
 	\subsection{Interaction Between Hardware and Software Components}
 	% Best images over here!
 	
