--- a/Documents/Report/report.tex
+++ b/Documents/Report/report.tex
@@ -68,10 +68,10 @@ The components are divided into three categories, namely hardware components, so
 		\subsubsection{Android Application}
 		
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
-	\subsection{Librarys}
+	\subsection{Librarys}% Best images over here!
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
-	\subsection{Interaction Between Hardware and Software Components}
-	% Best images over here!
+		\subsubsection{reacTIVision}
+		\subsubsection{Community Core Vision}
 	
 		\subsubsection{TUIO Protocol}
 		%Roland: Hier moet je het over je touchdingen hebben.
