--- a/Documents/Report/report.tex
+++ b/Documents/Report/report.tex
@@ -71,10 +71,25 @@ The components are divided into three categories, namely hardware components, so
 	\subsection{Librarys}% Best images over here!
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
 		\subsubsection{reacTIVision}
+		\label{sec:reactivision}
+		reactTIVision is a software component that is able to detect both finger touches on a screen and is able to recognize specific markers. 
+		Using the xxx algorithm it is able to detect at what position each marker is placed, and what the ID of this marker is. 
+		At every frame it detects what markers are present and sends the corresponding event as described in section \ref{sec:tuioprotocol}
 		\subsubsection{Community Core Vision}
+		\label{sec:communitycorevision}	
+		Community core vision is a very advanced program that does a lot of neat image processing. 
+		It detects so called "blobs" using a webcam image. 
+
 	
 		\subsubsection{TUIO Protocol}
-		%Roland: Hier moet je het over je touchdingen hebben.
+		\label{sec:tuioprotocol}
+		The TUIO Protocol consists of a series of event-based communication over port xxxxxxxx. 
+		Everytime a message comes in a few action-based events are called.  
+		As soon as a blob or a marker is detected the xxxxx function is called. 
+		As soon as a marker is detected the xxxxxx function is called. 
+		At every timeframe a blob or marker is updated the update() function is called with an according TUIO Point. 
+
+
 		
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Communication Protocol
