--- a/Documents/Report/report.tex
+++ b/Documents/Report/report.tex
@@ -24,7 +24,6 @@
 % For Thomas.
 % With nice images ofcourse!
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % System Architecture
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -56,11 +55,11 @@ The components are divided into three categories, namely hardware components, so
 		
 		
 		\subsubsection{Server}
-		For the server a portable version of Tomcat was used which is started at runtime everytime the game starts.
+		For the server a portable version of Tomcat was used which is started at runtime every time the game starts.
 		On the server we ran a single servlet which would handle all the communication between the server and the Android application.
 		This setup is very flexible, since no one has to have Tomcat installed and configured on their system.
 		Furthermore it allows for a tight coupling between the game and the server application.
-		On the one hand a tight coupling can be seen as a disadvantage since it becomes difficult to seperate the server from the game.
+		On the one hand a tight coupling can be seen as a disadvantage since it becomes difficult to separate the server from the game.
 		On the other hand it also saves a lot of time trying to built a suitable interface between the server and the game.
 				
 		Since the server is tightly couple with the game it is able to access all the components of the game through the \emph{GameManager}.
@@ -68,28 +67,28 @@ The components are divided into three categories, namely hardware components, so
 		\subsubsection{Android Application}
 		
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
-	\subsection{Librarys}% Best images over here!
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
+	\subsection{Interaction Between Hardware and Software Components}
+	% Using the title 'Interaction Between Hardware and Software Components' (or something similar) is more consistent with the rest.
+	% So first you could give an overview of the different components needed for this and then how it is all tied together.
+
 		\subsubsection{reacTIVision}
 		\label{sec:reactivision}
 		reactTIVision is a software component that is able to detect both finger touches on a screen and is able to recognize specific markers. 
 		Using the xxx algorithm it is able to detect at what position each marker is placed, and what the ID of this marker is. 
 		At every frame it detects what markers are present and sends the corresponding event as described in section \ref{sec:tuioprotocol}
+		
 		\subsubsection{Community Core Vision}
 		\label{sec:communitycorevision}	
 		Community core vision is a very advanced program that does a lot of neat image processing. 
 		It detects so called "blobs" using a webcam image. 
 
-	
 		\subsubsection{TUIO Protocol}
 		\label{sec:tuioprotocol}
 		The TUIO Protocol consists of a series of event-based communication over port xxxxxxxx. 
 		Everytime a message comes in a few action-based events are called.  
 		As soon as a blob or a marker is detected the xxxxx function is called. 
 		As soon as a marker is detected the xxxxxx function is called. 
-		At every timeframe a blob or marker is updated the update() function is called with an according TUIO Point. 
-
-
+		At every timeframe a blob or marker is updated the update() function is called with an according TUIO Point.
 		
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Communication Protocol
@@ -109,6 +108,24 @@ Returns: \texttt{\{success:true, phoneId:[INTEGER]\}} \\
 
 \noindent Using the \emph{connect}-command the Android application is able to connect itself with the server.
 The parameter \texttt{markId} is required and should contain the id which corresponds with the mark on the back of the phone.
-If the request is successful a unique \texttt{phoneId} is returned which should be used for every other request made.
+If the request is successful a unique identifier \texttt{phoneId} is returned which should be used for every other request made.
+
+\subsection{Disconnect}
+Request: \texttt{?action=disconnect\&phoneId=[INTEGER]} \\
+Returns: \texttt{\{success:true\}} \\
+
+\noindent Using the \emph{disconnect}-command the Android application is able to disconnect itself with the server.
+The parameter \texttt{phoneId} is required and denotes the unique identifier which is returned on a successful connect.
+After a successful request any subsequent request with the given \texttt{phoneId} will fail.
+
+\subsection{Select}
+Request: \texttt{?action=select&phoneId=[INTEGER]&item=[STRING]} \\
+Returns: \texttt{\{success:true\}} \\
+
+\noindent Using the \emph{select}-command the Android application is able to select an item.
+The parameter \texttt{phoneId} is required and denotes the unique identifier which is returned on a successful connect.
+The parameter \textt{item} is required and denotes the item to be selected. The supported items are: \emph{whistle} and \emph{cookie}.
+
+
 
 \end{document}
