--- a/Documents/Report/report.tex
+++ b/Documents/Report/report.tex
@@ -11,6 +11,9 @@
 % Smaller margins.
 %\usepackage[margin=0.5in]{geometry}
 
+% Graphic package.
+\usepackage{graphicx}
+
 % Monospace font.
 \usepackage{inconsolata}
 
@@ -62,7 +65,16 @@ The components are divided into three categories, namely hardware components, so
 		Therefor we will only discuss the core parts, which are the different states, the \emph{GameManager}-object and the \emph{Map}-object to to get reasonable overview of the game.
 		
 		\paragraph{States}
+		A small, but usefull, feature of Slick2D is that it contains a state switching mechanism.
+		This allowed us to create several states from which you can switch to any state.
+		In figure~\ref{fig:game-state-diagram} an overview is given of the different states and in what way one can switch to another state through the normal usage of the game.
 		
+		
+		\begin{figure}
+			\includegraphics[width=\columnwidth]{images/game-state-diagram.png}
+			\caption{Overview of the different states in the game.}
+			\label{fig:game-state-diagram}
+		\end{figure}
 		
 		
 		\paragraph{GameManager}
