--- a/Documents/Report/report.tex
+++ b/Documents/Report/report.tex
@@ -68,7 +68,15 @@ The components are divided into three categories, namely hardware components, so
 		A small, but usefull, feature of Slick2D is that it contains a state switching mechanism.
 		This allowed us to create several states from which you can switch to any state.
 		In figure~\ref{fig:game-state-diagram} an overview is given of the different states and in what way one can switch to another state through the normal usage of the game.
-		
+		The game starts in the \emph{LoadingState} after which it automatically transition to the \emph{ModalitySelectorMenuState}.
+		In this state the user is able to select, via buttons on the screen, which modality it wants to use to play the game with.
+		If the mouse/touch modality is choosen the game will transition to the \emph{ModalityMouseAndTouchMenuState}.
+		If the tangible modality is choosen the game will transition to the \emph{ModalityTangiblesMenuState}.
+		In both states the user is either able to go back or start the game after the appropiate preperations have been made.
+		In the \emph{GameState} the actual game is run.
+		If one of the two ending conditions, namely herding all the sheep or no more time left, has been reached the game will transition to the \emph{GameScoreMenuState}.
+		In this state the user is presented with the score and given the only possibility to exit the game.
+		There used to be the possibility of going back to the \emph{ModalitySelectorMenuState}, however there were some issues in resetting the game properly, thus we have removed this feature.
 		
 		\begin{figure}
 			\includegraphics[width=\columnwidth]{images/game-state-diagram.png}
@@ -76,8 +84,13 @@ The components are divided into three categories, namely hardware components, so
 			\label{fig:game-state-diagram}
 		\end{figure}
 		
-		
 		\paragraph{GameManager}
+		With the state switching mechanism of Slick2D it is not possible to transfer information between different states.
+		Therefor we have created the \emph{GameManager}-object.
+		The \emph{GameManager}-object allows the game to store 
+		
+		The \emph{GameManager} object is a global object designed to hold inf
+		
 		For holding player information and communcation with the server.
 		
 		
@@ -99,7 +112,9 @@ The components are divided into three categories, namely hardware components, so
 		Since the server is tightly couple with the game it is able to access all the components of the game through the \emph{GameManager}.
 		
 		\subsubsection{Android Application}
-		The 
+		The Android application is used as a tangible ...
+		
+		
 		
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
 	\subsection{Interaction Between Hardware and Software Components}
