Added more hardware specifications and images

--- a/Documents/Report/report.tex
+++ b/Documents/Report/report.tex
@@ -41,10 +41,18 @@ The components are divided into three categories, namely hardware components, so
 	% Nice image here.
 		
 		\subsubsection{Tabletop}
-		
+		The tabletop consists of a table where we replaced the table top with a glass plate with a layer of tracing paper on top.
+		Underneath the glass plate a huge mirror is placed that reflects the projects image by the beamer. 
+		Besides the mirror there is a small webcam that records everything that happens on the screen and everything that is visibile through the tracing paper. 
 		\subsubsection{Beamer}
-		
+		The beamer that projects an image on the tabletop is borrowed from our department and is a small portable beamer.
+		The image that is projected is sharp enough for the user to get an accurate idea of what is happening on the screen. 
+		As the projected image is not projected very wide the mirror in the tabletop is used. 
 		\subsubsection{Webcam}
+		The webcam used for our project is a simple consumer Microsoft Livecam. 
+		Our webcam records in a medium quality high enough for our simple application. 
+		Of course, using a better webcam would have improved our application but our current results were already acceptable. 
+		
 
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -62,7 +70,7 @@ The components are divided into three categories, namely hardware components, so
 		On itself LWJGL is not very suited to develop games with, however Slick2D adds extra functionality on top of LWJGL, like a game loop, a state switching mechanism, animations, etc.
 		
 		The game itself is divided into several parts, each containing many different objects of which most are not very important nor interesting to discuss.
-		Therefor we will only discuss the core parts, which are the different states, the \emph{GameManager}-object and the \emph{Map}-object to to get reasonable overview of the game.
+		Therefore we will only discuss the core parts, which are the different states, the \emph{GameManager}-object and the \emph{Map}-object to to get reasonable overview of the game.
 		
 		\paragraph{States}
 		A small, but usefull, feature of Slick2D is that it contains a state switching mechanism.
