Added the images to the paper

--- a/Documents/Report/report.tex
+++ b/Documents/Report/report.tex
@@ -44,16 +44,34 @@ The components are divided into three categories, namely hardware components, so
 		The tabletop consists of a table where we replaced the table top with a glass plate with a layer of tracing paper on top.
 		Underneath the glass plate a huge mirror is placed that reflects the projects image by the beamer. 
 		Besides the mirror there is a small webcam that records everything that happens on the screen and everything that is visibile through the tracing paper. 
+
+		\begin{figure}[h!]
+		  \caption{The tabletop}
+		  \centering
+		  \includegraphics[width=0.5\textwidth]{images/tabletop}
+		\end{figure}
+
 		\subsubsection{Beamer}
 		The beamer that projects an image on the tabletop is borrowed from our department and is a small portable beamer.
 		The image that is projected is sharp enough for the user to get an accurate idea of what is happening on the screen. 
 		As the projected image is not projected very wide the mirror in the tabletop is used. 
+
+		\begin{figure}[h!]
+		  \caption{The tabletop}
+		  \centering
+		  \includegraphics[width=0.5\textwidth]{images/beamer}
+		\end{figure}
+
 		\subsubsection{Webcam}
 		The webcam used for our project is a simple consumer Microsoft Livecam. 
 		Our webcam records in a medium quality high enough for our simple application. 
 		Of course, using a better webcam would have improved our application but our current results were already acceptable. 
-		
 
+		\begin{figure}[h!]
+		  \caption{The webcam}
+		  \centering
+		  \includegraphics[width=0.5\textwidth]{images/webcam}
+		\end{figure}
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\subsection{Software Components}
@@ -141,6 +159,12 @@ The components are divided into three categories, namely hardware components, so
 		\label{sec:communitycorevision}	
 		Community core vision is a very advanced program that does a lot of neat image processing. 
 		It detects so called "blobs" using a webcam image. 
+
+		\begin{figure}[h!]
+		  \caption{The game}
+		  \centering
+		  \includegraphics[width=0.5\textwidth]{images/tafelgebruik}
+		\end{figure}
 
 		\subsubsection{TUIO Protocol}
 		\label{sec:tuioprotocol}
